--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    background-color: #deeefb;
+
+body {
+    font-family: 'Roboto', sans-serif;
 }
