--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,11 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Poppins Bold';
+    src: url('../fonts/Poppins-Bold.ttf') format('truetype');
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: antiquewhite;
